try to fix overlap on placeholder text

--- a/app/assets/stylesheets/videos/slimselect-customized.scss
+++ b/app/assets/stylesheets/videos/slimselect-customized.scss
@@ -17,8 +17,7 @@
 
 .ss-main .ss-single-selected .placeholder {
   position: relative;
-  top: 0px;
-  line-height: 1.2em !important;
+  top: 2px;
 }
 
 .ss-deselect {
